<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.gridgain.demo</groupId>
	<artifactId>gg9-demo</artifactId>
	<version>1.0-SNAPSHOT</version>

        <repositories>
                <repository>
                        <id>GridGain External Repository</id>
                        <url>https://maven.gridgain.com/nexus/content/repositories/external</url>
                </repository>
	</repositories>

	<properties>
		<java.version>11</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<gridgain.version>9.0.0</gridgain.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.gridgain</groupId>
			<artifactId>ignite-core</artifactId>
			<version>${gridgain.version}</version>
		</dependency>
		<dependency>
			<groupId>org.gridgain</groupId>
			<artifactId>ignite-api</artifactId>
			<version>${gridgain.version}</version>
		</dependency>
		<dependency>
			<groupId>org.gridgain</groupId>
			<artifactId>ignite-runner</artifactId>
			<version>${gridgain.version}</version>
		</dependency>
		<dependency>
			<groupId>org.gridgain</groupId>
			<artifactId>ignite-jdbc</artifactId>
			<version>${gridgain.version}</version>
			<classifier>all</classifier>
		</dependency>
		<dependency>
			<groupId>org.gridgain</groupId>
			<artifactId>ignite-client</artifactId>
			<version>${gridgain.version}</version>
		</dependency>
		<dependency>
			<groupId>org.gridgain</groupId>
			<artifactId>ignite-catalog</artifactId>
			<version>${gridgain.version}</version>
		</dependency>
		<dependency>
			<groupId>org.gridgain</groupId>
			<artifactId>ignite-catalog-dsl</artifactId>
			<version>${gridgain.version}</version>
		</dependency>
		<dependency>
			<groupId>org.gridgain</groupId>
			<artifactId>ignite-distribution-zones</artifactId>
			<version>${gridgain.version}</version>
		</dependency>
		<dependency>
			<groupId>org.gridgain</groupId>
			<artifactId>ignite-sql-engine</artifactId>
			<version>${gridgain.version}</version>
		</dependency>
		<dependency>
			<groupId>org.gridgain</groupId>
			<artifactId>ignite-jdbc</artifactId>
			<version>${gridgain.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.parquet</groupId>
			<artifactId>parquet-avro</artifactId>
			<version>1.13.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-common</artifactId>
			<version>3.3.6</version>
		</dependency>
		<dependency>
			<groupId>org.apache.hadoop</groupId>
			<artifactId>hadoop-mapreduce-client-core</artifactId>
			<version>3.3.6</version>
		</dependency>
		<dependency>
			<groupId>com.github.javafaker</groupId>
			<artifactId>javafaker</artifactId>
			<version>1.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-collections4</artifactId>
			<version>4.4</version>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>src/main/java</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
			</resource>
			<resource>
				<directory>src/main/resources</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
		</plugins>
	</build>

</project>
